@@ -551,3 +551,4 @@ v0.76.1:
     - Added a new Default new world setting (wild_revert_on_mob_explosion). When enabled this will replace blocks destroyed by creature explosions in the wild.
     - Fixed a 'TickNextTick list out of synch' error on a new day.
     - Fixed overwriting custom language files (no, really this time).
+    - Towny will now clean up it's backup folder. Default time to keep backups is 90 days (configurable in config).
